--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
-    "hbs": "~4.0.1",
+    "hbs": "^4.0.1",
+    "knex": "^0.13.0",
     "morgan": "~1.7.0",
+    "pg": "^6.4.0",
     "serve-favicon": "~2.3.2"
   }
 }
