--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "heroku-postbuild": "cd client && yarn --production=false && yarn run build"
+    "heroku-postbuild": "knex migrate:rollback; knex migrate:latest; knex seed:run; cd client && yarn --production=false && yarn run build"
   },
   "dependencies": {
     "bcrypt-as-promised": "^1.1.0",
