--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "hbs": "^4.0.1",
+    "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "morgan": "~1.7.0",
     "pg": "^6.4.0",
