--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hbs": "^4.0.1",
     "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
+    "moment": "^2.18.1",
     "morgan": "~1.7.0",
     "pg": "^6.4.0",
     "serve-favicon": "~2.3.2"
