--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "recharts": "^1.0.0-alpha.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
