--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "express-validation": "^1.0.2",
     "hbs": "^4.0.1",
+    "joi": "^10.6.0",
     "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "moment": "^2.18.1",
