--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.18.1",
     "morgan": "~1.7.0",
     "pg": "^6.4.0",
+    "query-string": "^4.3.4",
     "serve-favicon": "~2.3.2"
   }
 }
